# h4-projekt-gruppe-6

./: .gitignore  README.md  release.sh
API/: .gitignore  API.csproj  AppDBContext.cs  Program.cs  appsettings.Development.json  appsettings.example.json  integration-tests.sh  release.sh  skantravels.service
API/Controllers/: HealthCheckController.cs  UsersController.cs
API/Helpers/: TokenHelper.cs
API/Migrations/: 20240812084720_CreateUser.Designer.cs  20240812084720_CreateUser.cs  20240813075158_ChangedUserWithGuid.Designer.cs  20240813075158_ChangedUserWithGuid.cs  20240813112418_NoMoreGuid.Designer.cs  20240813112418_NoMoreGuid.cs  20240816102314_removedSaltAndBackdoor.Designer.cs  20240816102314_removedSaltAndBackdoor.cs  20240829101159_AddRefreshTokenToUser.Designer.cs  20240829101159_AddRefreshTokenToUser.cs  20240904110821_addedprofilepicture.Designer.cs  20240904110821_addedprofilepicture.cs  AppDBContextModelSnapshot.cs
API/Models/: BaseModel.cs  User.cs
Docs/: SCRUM Logbog.md  kravspec.md  setup.md
Mobile/: .gitignore  README.md  build-apk.sh  environment.example.json  environment.prod.json  package-lock.json  package.json  pubspec.yaml
Mobile/.run/: main.dart.run.xml
Mobile/lib/: api.dart  main.dart  (+11 more)
rust-backend/: .env.example  .gitignore  Cargo.toml  skantravels-rust.service
rust-backend/migrations/: V1__create_favorites_table.sql  V2__add_name_and_description_to_favorites_table.sql  V3__create_reviews_table.sql  V4__create_images_table.sql  V5__add_image_id_to_reviews_table.sql
rust-backend/src/: .main.rs.swp  auth.rs  main.rs  models.rs
(+19 files in other folders)
