[package]
name = "skantravels"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
base64 = "0.22.1"
sha2 = "0.10.8"
hmac = "0.12.1"
serde = "1.0.207"
serde_json = "1.0.124"
actix-web = "4"
actix-utils = "3.0.1"
dotenvy = "0.15.7"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.48.0"
tokio = { version = "1", features = ["full"] } 
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
